--- a/front_vue/package.json
+++ b/front_vue/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start": "node server.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -11,7 +12,8 @@
     "core-js": "^3.8.3",
     "sweetalert2": "^11.10.8",
     "vue": "^3.2.13",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "express": "^4.18.2" 
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
