se continua desarrollo de order_service

--- a/orders_service/.styleci.yml
+++ b/orders_service/.styleci.yml
@@ -12,3 +12,7 @@ js:
     not-name:
       - webpack.mix.js
 css: true
+ volumes:
+      - .:/var/www/html
+      - ./cronfile:/etc/cron.d/laravel-cron
+    networks:
