--- a/orders_service/fly.toml
+++ b/orders_service/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for orders-service on 2024-05-03T14:25:36-05:00
+# fly.toml app configuration file generated for orders-service on 2024-05-03T12:02:40-05:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -9,31 +9,35 @@ console_command = 'php /var/www/html/artisan tinker'
 
 [build]
   [build.args]
-    NODE_VERSION = '18'
+    NODE_VERSION = '14'
     PHP_VERSION = '7.4'
 
 [env]
-  APP_URL ='https://orders-service.fly.dev'
-  DB_CONNECTION = 'mysql'
-  DB_CONNECTION = 'mysql'
-  DB_DATABASE = 'bar0zn8susamzmksztsy'
-  DB_HOST = 'bar0zn8susamzmksztsy-mysql.services.clever-cloud.com'
-  DB_PASSWORD = 'cGycOfcI0u7lfYnPfxMA'
-  DB_USERNAME = 'uxbkbhep827qihsn'
+  APP_URL ="https://orders-service.fly.dev"
   APP_ENV = 'production'
   LOG_CHANNEL = 'stderr'
   LOG_LEVEL = 'info'
   LOG_STDERR_FORMATTER = 'Monolog\Formatter\JsonFormatter'
   SESSION_DRIVER = 'cookie'
   SESSION_SECURE_COOKIE = 'true'
+  DB_CONNECTION = 'mysql'
+  DB_DATABASE = 'bar0zn8susamzmksztsy'
+  DB_HOST = 'bar0zn8susamzmksztsy-mysql.services.clever-cloud.com'
+  DB_PASSWORD = 'cGycOfcI0u7lfYnPfxMA'
+  DB_USERNAME = 'uxbkbhep827qihsn'
+  URL_WAREHOUSE_INGREDIENTS_SERVICE = 'https://warehouse-ingredients-service.fly.dev/'
+  URL_MARKER_INGREDIENTS_SERVICE = 'https://farmers-market-service.fly.dev/'
 
 [http_service]
-  internal_port = 8000
+  protocol = "tcp"
+  internal_port = 8080
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
-  min_machines_running = 0
+  min_machines_running = 1
   processes = ['app']
+
+
 
 [[vm]]
   memory = '1gb'
