se continua desarrollo de warehose_service

--- a/orders_service/example.env
+++ b/orders_service/example.env
@@ -1,21 +1,21 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:BpI69L/AXUdYYqC0SnvQwxt44EvboJpxYcKbJ4c4lFo=
+APP_KEY=base64:DbpFq0fPr/VDGqnATNPcQZJ3j7dCMxXNvL3qJNu5CpE=
 APP_DEBUG=true
 APP_URL=http://localhost
-URL_WAREHOUSE_INGREDIENTS_SERVICE = http://192.168.0.8:8000/
-URL_MARKER_INGREDIENTS_SERVICE = 'DEFINIR'
+URL_WAREHOUSE_INGREDIENTS_SERVICE = https://warehouse-ingredients-service.fly.dev/
+URL_MARKER_INGREDIENTS_SERVICE = https://farmers-market-service.fly.dev/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=bar0zn8susamzmksztsy-mysql.services.clever-cloud.com
 DB_PORT=3306
-DB_DATABASE=orders_service
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=bar0zn8susamzmksztsy
+DB_USERNAME=uxbkbhep827qihsn
+DB_PASSWORD=cGycOfcI0u7lfYnPfxMA
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
