--- a/warehouse_ingredients_service/example.env
+++ b/warehouse_ingredients_service/example.env
@@ -3,19 +3,22 @@ APP_ENV=local
 APP_KEY=base64:BY3Ytd+wIx7kjeEOyWP4Sn9b20OPIM7qECucSCbKv8c=
 APP_DEBUG=true
 APP_URL=http://192.168.0.8:8000
-URL_BUY_INGREDIENTS_SERVICE = https://solucionesintegralesmallorca.com/portafoliojav/
+URL_BUY_INGREDIENTS_SERVICE = https://farmers-market-service.fly.dev/
+URL_ORDER_INGREDIENTS_SERVICE=https://orders-service.fly.dev/
+
 EMAIL_SYSTEM = jav-rn@hotmail.com
+PASS_SYSTEM = password
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=b5xy0qxd60p8fq3fimuc-mysql.services.clever-cloud.com
 DB_PORT=3306
-DB_DATABASE=warehouse_ingredients_service
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=b5xy0qxd60p8fq3fimuc
+DB_USERNAME=uhduxahexsrdwxob
+DB_PASSWORD=DbEH7JOkso0Bg9tdgTys
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
